--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+* {
+  margin: 0;
+  padding: 0;
+}
 :root {
   font-family: "Alice", serif;
   line-height: 150%;
@@ -22,6 +26,19 @@ img {
   border-radius: 16px;
 }
 
+main {
+  padding: 12px;
+}
+
+#about p + p {
+  margin-top: 12px;
+}
+
+section + section {
+  margin-top: 24px;
+}
+
+
 h1 {
   line-height: 140%;
   font-size: 40px;
@@ -33,4 +50,10 @@ h2 {
 
 h1, h2 {
   color: #291B1A;
+  margin-bottom: 4px;
+  line-height: 150%;
+}
+
+ul {
+  padding-left: 24px;
 }
