--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@ body {
   padding: 24px;
   background-color: #F0E8C2;
   border-radius: 24px;
-  margin: 48px auto;
+  margin: 48px auto 28px;
 }
 
 img {
@@ -56,4 +56,11 @@ h1, h2 {
 
 ul {
   padding-left: 24px;
+}
+
+footer {
+  font-size: 16px;
+  text-align: center;
+  color: #F0E8C2;
+  padding-bottom: 48px;
 }
